<resources>
    <string name="app_name">Medical Appointment Organization</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="welcomeHome">Welcome!</string>
    <string name="email">Email</string>

    <string name="popup_text_default">Accept or Reject the Appointment</string>
    <string name="popup_title_default">YEah</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
