<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#304769"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="com.example.medicalorganization.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/ic_lock_outline_white" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="10dp" />


    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_margin="5dp"
        android:background="#f05924"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:onClick="OnLogin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/not_having_account"
        android:textColor="#ccc" />

    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#aaa"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:onClick="OpenRegister"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</LinearLayout>